<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.drasil</groupId>
    <artifactId>binarynotes-parent</artifactId>
    <version>1.6</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>BNCompiler</module>
        <module>JavaLibrary</module>
        <module>Dist</module>
    </modules>

    <name>BinaryNotes Parent</name>
    <description>BinaryNotes ASN.1 framework</description>
    <url>https://github.com/drasil/BinaryNotes</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/drasil/BinaryNotes.git</connection>
        <developerConnection>scm:git:git@github.com:drasil/BinaryNotes.git</developerConnection>
        <url>git@github.com:drasil/BinaryNotes.git</url>
    </scm>

    <developers>
        <developer>
            <id>abdulla</id>
            <name>Abdulla G. Abdurakhmanov</name>
            <email>abdulla@latestbit.com</email>
        </developer>
        <developer>
            <id>drasil</id>
            <name>Pavel Drasil</name>
            <email>pavel.drasil@gmail.com</email>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- compiler settings -->
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
</project>
